<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <DUT Name="ParametersPosition" Id="{85e9894d-ac1a-4d9d-9bd7-9be3113bbb94}">
    <Declaration><![CDATA[TYPE ParametersPosition :
STRUCT
	Velocity : LREAL := 10; //in mm/s
	Acceleration: LREAL := 100; // in mm/s2
	Deceleration: LREAL := 100;
	Position: LREAL := 10; // in mm
	PositionType : ePositionType := ePositionType.POSITION_ABS;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>